# ajou_robobarista_robot

./: README.md  ros2_bridgesever_test.py
ROS2_Foxy/: package.xml  setup.cfg  setup.py
ROS2_Foxy/fair_drip/: .ros2_bridgesever_test.py.swp  Control_Board.ui  Set_Value.yaml  conf_file.py  control_v2.py  robot_test.py
ROS2_Foxy/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2_Foxy/install/fair_drip/lib/fair_drip/: fair_lis  robot_test  talker
ROS2_Foxy/install/fair_drip/share/fair_drip/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2_Foxy/log/: latest_build
