<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fair_drip</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="beanst_hwangsh@naver.com">tk</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>python3-pyqt5</build_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>pandas</exec_depend>
  <exec_depend>websockets</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
